--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3001
 MONGO_URI=mongodb+srv://Micheci:Micheci12!@cluster0.6tapr9t.mongodb.net/FullStackMernTemplate?retryWrites=true&w=majority
+SECRET=k3Q5km89yqUjMfsg
